--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
@@ -5,33 +5,40 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-
-<div class="login">
-    <div class="content">
-        @using (Html.BeginForm("passwordupdate", "account", new { key = Request.QueryString["key"] }, FormMethod.Post, new { @class = "password-update-form" }))
-        {
-            //Html.RenderAction("AntiForgeryToken", "Home", true);
+<div class="forgot-pw-page" background-cover data-image="DefaultUni5.jpg">
+    <header class="static-page-header">
+        <a class="logo-wrapper" href="@Url.RouteUrl("HomePage")">
+            <div class="logo"></div>
+            @Html.Svg("~/images/site/icons.svg", "smallLogo", new { @class = "logo-small" })
+        </a>
+    </header>
+    <section class="main">
+        <div class="form-wrapper">
+            @using (Html.BeginForm("passwordupdate", "account", new { key = Request.QueryString["key"] }, FormMethod.Post, new { @class = "password-update-form" }))
+            {
+                //Html.RenderAction("AntiForgeryToken", "Home", true);
             @Html.ValidationSummary(true)
 
 
             <h3 class="form-title">@AccountSettingsResources.ChoosePassword</h3>
             <div class="form-group">
                 @Html.ValidationMessageFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control",required="required", autofocus = "autofocus", placeholder = AccountSettingsResources.NewPassword })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control", required = "required", autofocus = "autofocus", placeholder = AccountSettingsResources.NewPassword })
             </div>
             <div class="form-group">
-                @Html.ValidationMessageFor(m=>m.ConfirmPassword)
+                @Html.ValidationMessageFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", required = "required", placeholder = AccountSettingsResources.ConfirmPassword })
             </div>
             <div class="form-actions">
-                <button type="submit" class="action-btn pull-right">
-                    @GeneralResources.Submit
-                </button>
                 <a href="@Url.Action("index","home")" class="cancel-btn pull-right">
                     @GeneralResources.Cancel
                 </a>
+                <button type="submit" class="action-btn pull-right">
+                    @GeneralResources.Submit
+                </button>
             </div>
             <div class="create-account"></div>
-        }
-    </div>
+            }
+        </div>
+    </section>
 </div>
