--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutLogin.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/_LayoutLogin.cshtml
@@ -5,9 +5,9 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     @{Html.RenderPartial("_Head");}
-    @Html.Css2("signin")
+    @Html.Css2("homePage")
 </head>
-<body class="page-md">
+<body class="forgot-pw">
     @{ Html.RenderPartial("_Body");}
     @RenderBody()
     @*DO NOT REMOVE THIS AT ALL TIME*@
