--- a/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/HomePage/homePage2.rtl.css
@@ -4,8 +4,168 @@
 /*
 @import this file directly into your existing Less files to use these mixins
 */
-.homePage {
+.homePage,
+.forgot-pw {
   font-family: sans-serif;
+  margin: 0;
+}
+.homePage .home-page-body section.main,
+.forgot-pw-page section.main {
+  background: linear-gradient(to top, #000 -20px, transparent 200px, transparent 100%);
+}
+.homePage .home-page-body section.main .form-wrapper,
+.forgot-pw-page section.main .form-wrapper {
+  background: rgba(24, 26, 22, 0.93);
+  max-width: 460px;
+  width: calc(100% - 20px);
+  margin: 0 auto;
+  position: relative;
+  margin-top: 40px;
+}
+@media (max-width: 600px) {
+  .homePage .home-page-body section.main .form-wrapper,
+  .forgot-pw-page section.main .form-wrapper {
+    margin-top: 10px;
+  }
+}
+.homePage .home-page-body section.main .form-wrapper .signin-options,
+.forgot-pw-page section.main .form-wrapper .signin-options,
+.homePage .home-page-body section.main .form-wrapper form,
+.forgot-pw-page section.main .form-wrapper form,
+.homePage .home-page-body section.main .form-wrapper .forgot-password-text,
+.forgot-pw-page section.main .form-wrapper .forgot-password-text {
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 0 auto;
+}
+@media (max-width: 600px) {
+  .homePage .home-page-body section.main .form-wrapper .signin-options,
+  .forgot-pw-page section.main .form-wrapper .signin-options,
+  .homePage .home-page-body section.main .form-wrapper form,
+  .forgot-pw-page section.main .form-wrapper form,
+  .homePage .home-page-body section.main .form-wrapper .forgot-password-text,
+  .forgot-pw-page section.main .form-wrapper .forgot-password-text {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+.homePage .home-page-body section.main .form-wrapper .form-title,
+.forgot-pw-page section.main .form-wrapper .form-title {
+  color: #ffffff;
+  padding: 27px 25px 0 25px;
+  text-align: center;
+  font-weight: 300;
+  font-size: 21px;
+  margin: 0 auto;
+}
+@media (max-width: 600px) {
+  .homePage .home-page-body section.main .form-wrapper .form-title,
+  .forgot-pw-page section.main .form-wrapper .form-title {
+    font-size: 18px;
+    padding-top: 24px;
+  }
+}
+.homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child),
+.forgot-pw-page section.main .form-wrapper form .form-group:not(:last-child) {
+  margin-bottom: 20px;
+}
+@media (max-width: 600px) {
+  .homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child),
+  .forgot-pw-page section.main .form-wrapper form .form-group:not(:last-child) {
+    margin-bottom: 12px;
+  }
+}
+.homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child) .form-control,
+.forgot-pw-page section.main .form-wrapper form .form-group:not(:last-child) .form-control {
+  background-color: #dde3ec;
+  color: #282828;
+  border-radius: 0;
+  padding-right: 15px;
+  border: 1px solid #c3c3c3;
+  box-shadow: 0 0 0 1000px #e9eaed inset;
+  height: 46px;
+  width: 100%;
+  box-sizing: border-box;
+}
+@media (max-width: 600px) {
+  .homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child) .form-control,
+  .forgot-pw-page section.main .form-wrapper form .form-group:not(:last-child) .form-control {
+    height: 40px;
+  }
+}
+.homePage .home-page-body section.main .form-wrapper form .form-actions,
+.forgot-pw-page section.main .form-wrapper form .form-actions {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+@media (max-width: 600px) {
+  .homePage .home-page-body section.main .form-wrapper form .form-actions,
+  .forgot-pw-page section.main .form-wrapper form .form-actions {
+    margin-bottom: 10px;
+  }
+}
+.homePage .home-page-body section.main .form-wrapper form .form-actions a,
+.forgot-pw-page section.main .form-wrapper form .form-actions a {
+  color: #888b8e;
+}
+.homePage .home-page-body section.main .form-wrapper form .form-actions .terms,
+.forgot-pw-page section.main .form-wrapper form .form-actions .terms {
+  color: #888b8e;
+  font-size: 11px;
+  padding-left: 0;
+  white-space: pre-line;
+  text-align: right;
+  width: 100%;
+}
+.homePage .home-page-body section.main .form-wrapper form .alert,
+.forgot-pw-page section.main .form-wrapper form .alert {
+  padding: 0;
+  color: #f3565d;
+  display: block;
+  margin-bottom: 0;
+  margin-top: 0;
+  background: none;
+  border: none;
+  box-shadow: none;
+}
+.forgot-pw * {
+  box-sizing: border-box;
+}
+.forgot-pw * .static-page-header {
+  background: rgba(0, 0, 0, 0.9) !important;
+}
+@media (max-width: 1080px) {
+  .forgot-pw * .static-page-header {
+    padding-right: 30px;
+  }
+}
+.forgot-pw * section.main {
+  padding-top: 65px;
+  height: 100vh;
+}
+.forgot-pw * section.main .form-wrapper {
+  padding-bottom: 30px;
+}
+.forgot-pw * section.main .form-wrapper form .form-title {
+  margin-bottom: 30px;
+}
+.forgot-pw * section.main .form-wrapper form .form-actions {
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.forgot-pw * section.main .form-wrapper form .form-actions .action-btn {
+  margin-right: 10px;
+}
+.forgot-pw * section.main .form-wrapper form .form-actions .cancel-btn {
+  min-height: 0;
+  text-decoration: none;
+  color: #212325;
 }
 .homePage .static-page-header .toggle {
   opacity: 1 !important;
@@ -142,86 +302,6 @@
   margin-top: 0;
 }
 .homePage .home-page-body section.main {
-  background: linear-gradient(to top, #000 -20px, transparent 200px, transparent 100%);
-  /*position: relative;
-                text-align: center;
-                padding-bottom: 200px;
-                margin-top: @heightOfstaticPageHeader;
-                background: linear-gradient(to top, #000 -20px, transparent 200px, transparent 100%);
-                padding: 0;
-                overflow: visible;
-
-                #main-wrapper {
-                    padding: 296px 0 40px 0;
-                    overflow: visible;
-                    position: relative;
-
-                    @media(max-width: 600px) {
-                        padding: 50px 0 40px 0;
-                    }
-                }
-
-                .welcome-text {
-                    position: relative;
-                    text-align: center;
-                    //margin: 400px auto 0 auto;
-                    padding: 0 10px;
-                    -moz-box-sizing: border-box;
-                    -webkit-box-sizing: border-box;
-                    box-sizing: border-box;
-                    color: @textColorWhite;
-                    display: inline-block;
-                    max-width: 800px;
-                    position: relative;
-
-                    .uni-logo-wrapper {
-                        @media(max-width: 960px) {
-                            display: none;
-                        }
-                    }
-
-                    .sb-logo {
-                        left: -210px;
-                        bottom: -40px;
-                        bottom: -80px;
-                        z-index: 1;
-                        width: 200px;
-                        height: 200px;
-                        position: absolute;
-                        background-color: #383838;
-                        background-size: cover;
-                        border: 5px solid @textColorWhite;
-                        box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-                    }
-
-
-                    @media(max-width: 960px) {
-                        width: 100% !important;
-                        padding: 0 10px;
-                    }
-
-                    > h1 {
-                        text-shadow: 2px 2px 4px @textColorBlack;
-                        font-weight: bold;
-                        width: 100%; //rtl:520px
-                        margin: 14px auto;
-                        text-transform: capitalize;
-                        display: inline-block;
-                        font-size: 50px;
-
-                        @media(max-width: 1200px) {
-                            font-size: 4vw;
-                        }
-
-                        @media(max-width: 960px) {
-                            font-size: 5.3vw;
-                        }
-
-                        @media(max-width: 600px) {
-                            font-size: 6vw;
-                        }
-                    }
-                }*/
   /*#region forms*/
   /*#endregion*/
   /*@media(min-width: 960px) {
@@ -264,35 +344,6 @@
   height: 15px;
   fill: #888b8e;
   padding: 10px;
-}
-.homePage .home-page-body section.main .form-wrapper .form-title {
-  color: #ffffff;
-  padding: 27px 25px 0 25px;
-  text-align: center;
-  font-weight: 300;
-  font-size: 21px;
-  margin: 0 auto;
-}
-@media (max-width: 600px) {
-  .homePage .home-page-body section.main .form-wrapper .form-title {
-    font-size: 18px;
-    padding-top: 24px;
-  }
-}
-.homePage .home-page-body section.main .form-wrapper .signin-options,
-.homePage .home-page-body section.main .form-wrapper form,
-.homePage .home-page-body section.main .form-wrapper .forgot-password-text {
-  padding-left: 30px;
-  padding-right: 30px;
-  margin: 0 auto;
-}
-@media (max-width: 600px) {
-  .homePage .home-page-body section.main .form-wrapper .signin-options,
-  .homePage .home-page-body section.main .form-wrapper form,
-  .homePage .home-page-body section.main .form-wrapper .forgot-password-text {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
 }
 .homePage .home-page-body section.main .form-wrapper .signin-options {
   display: -webkit-flex;
@@ -349,67 +400,6 @@
   .homePage .home-page-body section.main .form-wrapper .signin-options .login-option .text {
     font-size: 16px;
   }
-}
-.homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child) {
-  margin-bottom: 15px;
-}
-@media (max-width: 600px) {
-  .homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child) {
-    margin-bottom: 12px;
-  }
-}
-.homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child) .form-control {
-  background-color: #dde3ec;
-  color: #282828;
-  border-radius: 0;
-  padding-right: 15px;
-  border: 1px solid #c3c3c3;
-  box-shadow: 0 0 0 1000px #e9eaed inset;
-  height: 46px;
-  width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 5px;
-}
-@media (max-width: 600px) {
-  .homePage .home-page-body section.main .form-wrapper form .form-group:not(:last-child) .form-control {
-    height: 40px;
-  }
-}
-.homePage .home-page-body section.main .form-wrapper form .form-actions {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  margin-bottom: 20px;
-}
-@media (max-width: 600px) {
-  .homePage .home-page-body section.main .form-wrapper form .form-actions {
-    margin-bottom: 10px;
-  }
-}
-.homePage .home-page-body section.main .form-wrapper form .form-actions a {
-  color: #888b8e;
-}
-.homePage .home-page-body section.main .form-wrapper form .form-actions .terms {
-  color: #888b8e;
-  font-size: 11px;
-  padding-left: 0;
-  white-space: pre-line;
-  text-align: right;
-  width: 100%;
-}
-.homePage .home-page-body section.main .form-wrapper form .alert {
-  padding: 0;
-  color: #f3565d;
-  display: block;
-  margin-bottom: 0;
-  margin-top: 0;
-  background: none;
-  border: none;
-  box-shadow: none;
 }
 .homePage .home-page-body section.main .form-wrapper .bottom-strip {
   margin: 0;
