--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -1,5 +1,4 @@
-﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Item.Resources
-@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
+﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 <div class="page-head">
     <div class="page-title">
@@ -8,14 +7,14 @@
 </div>
 <div class="userPage">
     <div class="profile-sidebar">
-        <div class="portlet light profile-sidebar-portlet" ng-if="::!u.isUserProfile">
+        <div class="portlet light profile-sidebar-portlet" @*ng-if="::!u.isUserProfile"*@>
             <div class="profile-userpic">
                 <user-image ng-if="u.details" class="img-responsive" name="u.details.name" image="u.details.image" width="125" height="125"></user-image>
             </div>
             <div class="profile-usertitle">
                 <h3 class="profile-usertitle-name multi-line-ellipsis limit-two" ng-bind="::u.details.name"></h3>
                 <h4 class="profile-usertitle-job" ng-bind="::u.details.universityName"></h4>
-                <button class="message" @*ng-if="!u.isUserProfile"*@ ng-click="u.sendMessage()" user-not-register-popup="click">
+                <button class="message" ng-if="::!u.isUserProfile" ng-click="u.sendMessage()" user-not-register-popup="click">
                     <div class="content">
                         <md-icon md-svg-icon="t:chat"></md-icon>
                         <span>@UserResources.MessageButton</span>
@@ -27,22 +26,22 @@
             <h5 count-up id="points" end-val="{{u.details.score}}" duration="3"></h5>
             <h5>@UserResources.Points</h5>
         </div>
-        @*<div class="points-awards" hide-xs>
-                <span class="earn">@UserResources.Share</span>
-                <ul style="list-style-type:square">
-                    <li>@UserResources.Creating</li>
-                    <li>@UserResources.Accepted</li>
-                </ul>
-                <span class="earn">@UserResources.PointMenu2</span>
-                <ul style="list-style-type:square">
-                    <li>@UserResources.AcceptedToCourse</li>
-                    <li>@UserResources.UploadItem</li>
-                    <li>@UserResources.Answering</li>
-                    <li>@UserResources.Asking</li>
-                    <li>@UserResources.Likes</li>
-                    <li>@UserResources.ShareFB</li>
-                </ul>
-            </div>*@
+        <div class="points-awards" hide-xs>
+            <span class="earn">@UserResources.Share</span>
+            <ul style="list-style-type:square">
+                <li>@UserResources.Creating</li>
+                <li>@UserResources.Accepted</li>
+            </ul>
+            <span class="earn">@UserResources.PointMenu2</span>
+            <ul style="list-style-type:square">
+                <li>@UserResources.AcceptedToCourse</li>
+                <li>@UserResources.UploadItem</li>
+                <li>@UserResources.Answering</li>
+                <li>@UserResources.Asking</li>
+                <li>@UserResources.Likes</li>
+                <li>@UserResources.ShareFB</li>
+            </ul>
+        </div>
     </div>
     <div class="profile-content">
         <div class="portlet light">
@@ -79,25 +78,6 @@
                 </md-tab>
             </md-tabs>
             <div class="page-animation" ui-view></div>
-            @*@{
-
-                    Html.RenderPartial("Items");
-                    Html.RenderPartial("Feed");
-                    Html.RenderPartial("Quizzes");
-                    Html.RenderPartial("Members");
-                }*@
-            @* <div class="tab-content" ng-switch on="u.tab">*@
-
-            @*<div ng-switch-when="b">
-                    <div layout-padding layout="row" layout-wrap layout-align="start center" srph-infinite-scroll="u.myPagingFunction()">
-                        <div class="user-box" flex-xs="100" flex-xl="33" flex="33" flex-sm="50" flex-md="50" ng-repeat="e in u.boxes" ng-include="'box-template.html'"></div>
-                    </div>
-                </div>*@
-
-
-
-
-            @*</div>*@
         </div>
     </div>
 </div>
