Removed unnecessary files from project and merged LayoutLogin into password update

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/PasswordUpdate.cshtml
@@ -2,43 +2,87 @@
 @using Zbang.Cloudents.Mvc4WebRole.Models.Account.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @{
-    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+    Layout = null;
 }
+<!DOCTYPE html>
+<html lang="en" dir="rtl">
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    @Html.Css2("homePage")
+    @{Html.RenderPartial("_Head");}
+</head>
+<body class="forgot-pw">
+    @{ Html.RenderPartial("_Body");}
+    <div class="forgot-pw-page" background-cover data-image="DefaultUni5.jpg">
+        <header class="static-page-header">
+            <a class="logo-wrapper" href="@Url.RouteUrl("HomePage")">
+                <div class="logo"></div>
+                @Html.Svg("~/images/site/icons.svg", "smallLogo", new { @class = "logo-small" })
+            </a>
+        </header>
+        <section class="main">
+            <div class="form-wrapper">
+                @using (Html.BeginForm("passwordupdate", "account", new { key = Request.QueryString["key"] }, FormMethod.Post, new { @class = "password-update-form" }))
+                {
+                    //Html.RenderAction("AntiForgeryToken", "Home", true);
+                    @Html.ValidationSummary(true)
 
-<div class="forgot-pw-page" background-cover data-image="DefaultUni5.jpg">
-    <header class="static-page-header">
-        <a class="logo-wrapper" href="@Url.RouteUrl("HomePage")">
-            <div class="logo"></div>
-            @Html.Svg("~/images/site/icons.svg", "smallLogo", new { @class = "logo-small" })
-        </a>
-    </header>
-    <section class="main">
-        <div class="form-wrapper">
-            @using (Html.BeginForm("passwordupdate", "account", new { key = Request.QueryString["key"] }, FormMethod.Post, new { @class = "password-update-form" }))
-            {
-                //Html.RenderAction("AntiForgeryToken", "Home", true);
-            @Html.ValidationSummary(true)
 
+                    <h3 class="form-title">@AccountSettingsResources.ChoosePassword</h3>
+                    <div class="form-group">
+                        @Html.ValidationMessageFor(m => m.Password)
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", required = "required", autofocus = "autofocus", placeholder = AccountSettingsResources.NewPassword })
+                    </div>
+                    <div class="form-group">
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword)
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", required = "required", placeholder = AccountSettingsResources.ConfirmPassword })
+                    </div>
+                    <div class="form-actions">
+                        <a href="@Url.Action("index","home")" class="cancel-btn pull-right">
+                            @GeneralResources.Cancel
+                        </a>
+                        <button type="submit" class="action-btn pull-right">
+                            @GeneralResources.Submit
+                        </button>
+                    </div>
+                    <div class="create-account"></div>
+                }
+            </div>
+        </section>
+    </div>
+    @*DO NOT REMOVE THIS AT ALL TIME*@
+    <div id="cssCheck"></div>
+    @Html.Script2("signin")
+    @Html.JqueryValidateLocale()
+    <script src="https://apis.google.com/js/platform.js" onload="googleLoad()" defer></script>
+    <script>
+        Login.initExternalLogin();
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            <h3 class="form-title">@AccountSettingsResources.ChoosePassword</h3>
-            <div class="form-group">
-                @Html.ValidationMessageFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control", required = "required", autofocus = "autofocus", placeholder = AccountSettingsResources.NewPassword })
-            </div>
-            <div class="form-group">
-                @Html.ValidationMessageFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", required = "required", placeholder = AccountSettingsResources.ConfirmPassword })
-            </div>
-            <div class="form-actions">
-                <a href="@Url.Action("index","home")" class="cancel-btn pull-right">
-                    @GeneralResources.Cancel
-                </a>
-                <button type="submit" class="action-btn pull-right">
-                    @GeneralResources.Submit
-                </button>
-            </div>
-            <div class="create-account"></div>
-            }
-        </div>
-    </section>
-</div>
+        ga('create', 'UA-9850006-3', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <script type="text/javascript" src="~/js/CDNFallbackWithoutAngular.js?v=@VersionHelper.CurrentVersion(true)" defer></script>
+    <noscript>
+        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-NDZLW7"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <script>
+        (function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                '//www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NDZLW7');</script>
+</body>
+</html>
+
